tools/tests/errors/surf_num_17.ki
# Complex division by zero must throw.
var c = import("complex")
discard c.of(1, 1) / c.zero
